# sol

./: Cargo.toml  README.md
examples/: complex.sol  game_data_example.sol  game_data_model.sol  parser.rs  test.sol  test.sol.json
examples/extract_strings/: extract.rs  main.rs  replace.rs  subject-en.po  subject-pt_BR.json  subject-pt_BR.po  subject-pt_BR.sol  subject-template.pot  subject.sol
examples/features/: index.sol
examples/ir/: main.rs
examples/project/: main.rs
examples/replace_strings/: main.rs
examples/replace_strings/scenes/: inner-voices-test-glossary-pt_BR.po  mayor_office.sol  mayor_office.sol.import
examples/replace_strings/scenes/translations_ja/: mayor_office.sol  mayor_office.sol.import
examples/replace_strings/scenes/translations_pt/: mayor_office.sol  mayor_office.sol.import
examples/scratch/: main.rs
examples/simple/: Item.sol  wooden_sword.sol
src/: lib.rs
src/introspec/: mod.rs  project.rs  repr.rs
src/parser/: ast.rs  chumsky.rs  mod.rs  nom.rs
src/runtime/: mod.rs
src/unparser/: mod.rs
