[package]
name = "sol-lang"
version = "0.0.2"
edition = "2021"
description = "Sol toolchain and library."
repository = "https://github.com/mrpedrobraga/sol"
license = "MIT"
authors = ["mrpedrobraga <mrhenribraga@gmail.com>"]

[[bin]]
name = "sol"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
miette = { version = "7.2.0", features = ["fancy"] }
thiserror = "2.0.12"
tree-sitter-highlight = "0.25.4"
clap = { version = "4.5.4", features = ["derive", "unicode", "color"] }
asky = "0.1.1"
clap_complete_command = "0.6.1"
nom = "8.0.0"
syn = "2.0.101"
quote = "1.0.40"
prettyplease = "0.2.32"
proc-macro2 = "1.0.95"
chumsky = "0.10.1"
